--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
-  background-color: #e8ded2;
+  background-color: #f0a500;
 }
 
 h1 {
@@ -42,22 +42,31 @@ p{
 
 /************************class*********************/
 .top {
-  background-image: linear-gradient(#5eaaa8, #e8ded2);
+  background-color: #cf7500;
   position: relative;
+}
+
+.top-container{
+  padding: auto 20%;
+}
+
+.navbar-bg-color{
+  background-color: #cf7500;
 }
 
 .name {
   display: inline-block;
   text-align: center;
-  position: relative;
-  margin: 10px auto 10px 15px;
   font-size: 50px;
+  position: relative;
+  left: 15%;
+  border-top: 20px;
 }
 
 .contact {
   display: inline-block;
   position: relative;
-  left: 59%;
+  left: 55%;
   text-align: right;
   line-height: 0;
   font-size: 20px;
@@ -73,17 +82,17 @@ p{
 }
 
 .work-experiment {
-  margin: 30px;
-  padding-left: 15%;
+  padding: 6%;
+  text-align: center;
 }
 
 .experience {
-  margin: 30px;
+  padding: 30px;
   text-align: center;
   line-height: 2;
+  background-color: #07689f;
 
 }
-
 
 .legacy {
   margin: 10px;
@@ -128,6 +137,10 @@ p{
   top: 10px;
 }
 
+.hobbies{
+margin: 20px;
+}
+
 .hobbies-text{
 padding-left: 40%;
 }
@@ -144,31 +157,36 @@ padding-left: 40%;
 }
 
 .bottom {
-  background-image: linear-gradient(#e8ded2, #5eaaa8);
+  background-color:#f0a500;
   text-align: center;
 }
+.small-text{
+  font-size: 15px;
+}
+.aline{
+  position: relative;
+  left: 20%;
+}
+
 
 /************************image*********************/
 .nissi-image {
   width: 100px;
   height: 100px;
-  position: absolute;
-  right: 47%;
-  display: block;
+  position: relative;
+  left: 50%;
 }
 
-.barbershop {
-  width: 300px;
-  height: 300px;
+.carousel-image {
+  width: 275px;
+  height: 275px;
   position: relative;
-  left: 100%;
+  border-radius: 100%;
+  margin: 2%;
 }
 
-.zion-image {
-  width: 300px;
-  height: 300px;
-  position: relative;
-  left: 100%;
+.can-bg-color{
+  background-color: #07689f;
 }
 
 .legacy-image {
@@ -219,17 +237,23 @@ padding-left: 40%;
   text-align: left;
   margin: auto auto auto 10%;
   left: 40%;
+  display: inline-block;
 }
 .ghuatghuat{
   text-align: left;
-  left: 70%;
-  position: absolute;
-  top: 429px;
+  float: right;
+    margin-right: 10%;
 }
 .contact-us{
   margin: auto 20% auto 20%;
 }
+.contact-us-bg-color{
+  background-color: #f0a500;
+}
 
+.card-color{
+  background-color: #a2d5f2;
+}
 
 /************************ids*********************/
 #homebutton {
@@ -239,8 +263,4 @@ padding-left: 40%;
 }
 #mascot{
   font-size: 30px;
-}
-#submit{
-  position: relative;
-  left: 100%;
 }
